# MissileGuidanceExercise

./: .gitignore  CMakeLists.txt  MGE64.desktop  README.md
.github/workflows/: CommonBuild.yml  LinuxB&D.yml  WindowsB&D.yml  build.yml
db/: missileDescs.lua
include/: PIDController.hpp  mainwindow.h  simulation.hpp  utils.hpp
include/Simulation/: CommonSimParams.hpp  mainwindow.h  simulation.hpp
include/Simulation/Auxilary/: utils.hpp
include/Simulation/SimObjects/: Missile.hpp  MovingObject.hpp  Target.hpp
locale/: MissileGuidanceExercise_ru_RU.ts
projects/MissileGuidanceExercise/: CMakeLists.txt  icon.rc
projects/MissileGuidanceExercise/db/: missileDescs.lua  targetDescs.lua
projects/MissileGuidanceExercise/include/Simulation/: CommonSimParams.hpp  simulation.hpp
projects/MissileGuidanceExercise/include/Simulation/Auxilary/: PIDController.hpp  utils.hpp
projects/MissileGuidanceExercise/include/Simulation/SimObjects/: Target.hpp
projects/MissileGuidanceExercise/source/: qcustomplot.cpp
projects/MissileGuidanceExercise/source/Simulation/SimObjects/: Missile.cpp  MovingObject.cpp
qml/: mainwindow.ui
source/: PIDController.cpp  main.cpp  mainwindow.cpp  simulation.cpp  utils.cpp
source/Simulation/: mainwindow.cpp  simulation.cpp
source/Simulation/Auxilary/: PIDController.cpp  utils.cpp
source/Simulation/SimObjects/: Missile.cpp  MovingObject.cpp  Target.cpp
